# pocket-agent

./: .env.example  .gitignore  DESIGN.md  DONE.md  INTRO.md  README.md  README_AGENTS.md  findings.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: API_MANUAL.md
release/: 0.2.5.md
releases/: 0.1.0.md  0.1.1.md  0.2.0.md  0.2.1.md  0.2.2.md  0.2.3.md  0.2.4.md
src/: App.svelte
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: stt-helper
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: client.rs  server.rs
src-tauri/src/commands/: chat.rs  config.rs  history.rs  mod.rs  voice.rs
src-tauri/src/voice/: hotkey.rs  mod.rs  record.rs  stt.rs
src-tauri/swift-stt/: build.sh  main.swift
src/lib/: i18n.ts
src/lib/components/: AvatarIcon.svelte  Character.svelte  ChatPanel.svelte  ContextMenu.svelte  CustomSelect.svelte  DialogBox.svelte  DynamicIsland.svelte  Icon.svelte  RecordingCapsule.svelte  SettingsPanel.svelte
src/lib/stores/: character.ts  chat.ts  layout.ts  settings.ts
