[package]
name = "pocket-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "pocket_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-store = "2"

# HTTP 客户端：default-features = false 跳过 OpenSSL，纯 HTTP localhost 不需要 TLS
reqwest = { version = "0.12", features = ["stream", "json", "multipart"], default-features = false }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SSE 流处理
futures-util = "0.3"
eventsource-stream = "0.2"

# 语音输入
rdev = "0.5"
cpal = "0.15"
hound = "3.5"
rodio = "0.19"

# Regex for [CMD:...] tag parsing
regex = "1"

[profile.release]
opt-level = "s"     # 优化体积（旧机器存储也紧张）
lto = true
codegen-units = 1
panic = "abort"
strip = true        # 移除调试符号，减小二进制体积
